ecmascript/parser/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_noImplicitAny_typesForPackageExist/input.ts.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_noImplicitAny_typesForPackageExist/input.ts:8:9
  |
8 | { "name": "@types/foo", "version": "1.2.3" }
  |         ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/typescript-errors/tsc/moduleResolution/untypedModuleImport_noImplicitAny_typesForPackageExist/input.ts:8:3
  |
8 | { "name": "@types/foo", "version": "1.2.3" }
  |   ^^^^^^

